@@ -14,7 +14,6 @@
  */
 package org.hyperledger.besu.ethereum.api.graphql.internal.pojoadapter;
 
-import org.hyperledger.besu.config.GoQuorumOptions;
 import org.hyperledger.besu.datatypes.Address;
 import org.hyperledger.besu.datatypes.Hash;
 import org.hyperledger.besu.datatypes.Wei;
@@ -29,7 +28,6 @@ import org.hyperledger.besu.ethereum.rlp.BytesValueRLPOutput;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import javax.annotation.Nonnull;
 
 import graphql.schema.DataFetchingEnvironment;
@@ -59,34 +57,37 @@ public class TransactionAdapter extends AdapterBase {
     return transactionReceiptWithMetadata;
   }
 
-  public Optional<Hash> getHash() {
-    return Optional.of(transactionWithMetadata.getTransaction().getHash());
+  public Hash getHash() {
+    return transactionWithMetadata.getTransaction().getHash();
   }
 
   public Optional<Integer> getType() {
     return Optional.of(transactionWithMetadata.getTransaction().getType().ordinal());
   }
 
-  public Optional<Long> getNonce() {
-    final long nonce = transactionWithMetadata.getTransaction().getNonce();
-    return Optional.of(nonce);
+  public Long getNonce() {
+    return transactionWithMetadata.getTransaction().getNonce();
   }
 
   public Optional<Integer> getIndex() {
     return transactionWithMetadata.getTransactionIndex();
   }
 
-  public Optional<AccountAdapter> getFrom(final DataFetchingEnvironment environment) {
+  public AccountAdapter getFrom(final DataFetchingEnvironment environment) {
     final BlockchainQueries query = getBlockchainQueries(environment);
     Long blockNumber = environment.getArgument("block");
     if (blockNumber == null) {
       blockNumber = transactionWithMetadata.getBlockNumber().orElseGet(query::headBlockNumber);
     }
-    return query.getAndMapWorldState(
-        blockNumber,
-        mutableWorldState ->
-            new AccountAdapter(
-                mutableWorldState.get(transactionWithMetadata.getTransaction().getSender())));
+    return query
+        .getAndMapWorldState(
+            blockNumber,
+            mutableWorldState ->
+                Optional.of(
+                    new AccountAdapter(
+                        mutableWorldState.get(
+                            transactionWithMetadata.getTransaction().getSender()))))
+        .get();
   }
 
   public Optional<AccountAdapter> getTo(final DataFetchingEnvironment environment) {
@@ -102,17 +103,15 @@ public class TransactionAdapter extends AdapterBase {
             transactionWithMetadata
                 .getTransaction()
                 .getTo()
-                .map(address -> new AccountAdapter(address, ws.get(address)))
-                // safe because mapWorldState returns Optional.ofNullable
-                .orElse(null));
+                .map(address -> new AccountAdapter(address, ws.get(address))));
   }
 
-  public Optional<Wei> getValue() {
-    return Optional.of(transactionWithMetadata.getTransaction().getValue());
+  public Wei getValue() {
+    return transactionWithMetadata.getTransaction().getValue();
   }
 
-  public Optional<Wei> getGasPrice() {
-    return transactionWithMetadata.getTransaction().getGasPrice();
+  public Wei getGasPrice() {
+    return transactionWithMetadata.getTransaction().getGasPrice().orElse(Wei.ZERO);
   }
 
   public Optional<Wei> getMaxPriorityFeePerGas() {
@@ -128,12 +127,17 @@ public class TransactionAdapter extends AdapterBase {
         .map(rwm -> rwm.getTransaction().getEffectiveGasPrice(rwm.getBaseFee()));
   }
 
-  public Optional<Long> getGas() {
-    return Optional.of(transactionWithMetadata.getTransaction().getGasLimit());
+  public Optional<Wei> getEffectiveTip(final DataFetchingEnvironment environment) {
+    return getReceipt(environment)
+        .map(rwm -> rwm.getTransaction().getEffectivePriorityFeePerGas(rwm.getBaseFee()));
   }
 
-  public Optional<Bytes> getInputData() {
-    return Optional.of(transactionWithMetadata.getTransaction().getPayload());
+  public Long getGas() {
+    return transactionWithMetadata.getTransaction().getGasLimit();
+  }
+
+  public Bytes getInputData() {
+    return transactionWithMetadata.getTransaction().getPayload();
   }
 
   public Optional<NormalBlockAdapter> getBlock(final DataFetchingEnvironment environment) {
@@ -174,7 +178,8 @@ public class TransactionAdapter extends AdapterBase {
           return Optional.empty();
         }
         final long blockNumber = bn.orElseGet(txBlockNumber::get);
-        return query.getAndMapWorldState(blockNumber, ws -> new AccountAdapter(ws.get(addr.get())));
+        return query.getAndMapWorldState(
+            blockNumber, ws -> Optional.of(new AccountAdapter(ws.get(addr.get()))));
       }
     }
     return Optional.empty();
@@ -209,25 +214,11 @@ public class TransactionAdapter extends AdapterBase {
     return results;
   }
 
-  public boolean getIsPrivate() {
-    return transactionWithMetadata
-        .getTransaction()
-        .isGoQuorumPrivateTransaction(GoQuorumOptions.getGoQuorumCompatibilityMode());
-  }
-
-  public Optional<Bytes> getPrivateInputData() {
-    final Transaction transaction = transactionWithMetadata.getTransaction();
-    if (transaction.isGoQuorumPrivateTransaction(GoQuorumOptions.getGoQuorumCompatibilityMode())) {
-      return Optional.ofNullable(transaction.getPayload());
-    }
-    return Optional.of(Bytes.EMPTY);
-  }
-
   public List<AccessListEntryAdapter> getAccessList() {
     return transactionWithMetadata
         .getTransaction()
         .getAccessList()
-        .map(l -> l.stream().map(AccessListEntryAdapter::new).collect(Collectors.toList()))
+        .map(l -> l.stream().map(AccessListEntryAdapter::new).toList())
         .orElse(List.of());
   }
 
